--- a/package.json
+++ b/package.json
@@ -6,19 +6,33 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^4.17.15",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
+    "@types/prompt": "^1.1.4",
+    "@types/prompt-sync": "^4.2.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
+    "openai": "^3.1.0",
+    "prompt-sync": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
+    "react-type-animation": "^2.1.2",
+    "ts-node": "^10.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev:js": "node ./backend/js/Server.js",
+    "build:ts": "tsc -p ./backend/tsconfig.json",
+    "dev": "nodemon ./backend/ts/Server.ts",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "typescript": "^4.9.4"
   }
 }
