--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-OPENAI_API_KEY = "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";
-PORT = 8000;
+OPENAI_API_KEY = "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"
+REACT_APP_FIREBASE_API_KEY = "AIzaSyBbg8nTUk4Ht0IF7XLzdZpDpeagu3Qi0-Y"
+PORT = 8000
+SKIP_PREFLIGHT_CHECK=true
