--- a/package.json
+++ b/package.json
@@ -3,32 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/language-data": "^6.1.0",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
-    "@types/prompt": "^1.1.4",
-    "@types/prompt-sync": "^4.2.0",
     "@types/react": "^18.0.26",
+    "@types/react-codemirror": "^1.0.7",
     "@types/react-dom": "^18.0.10",
+    "@uiw/react-codemirror": "^3.2.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.15.0",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0",
-    "prompt-sync": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-type-animation": "^2.1.2",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-social-login-buttons": "^3.6.1",
     "ts-node": "^10.9.1",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "dev:js": "node ./backend/js/Server.js",
     "build:ts": "tsc -p ./backend/tsconfig.json",
@@ -40,6 +47,16 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -55,7 +72,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@types/cors": "^2.8.13",
-    "typescript": "^4.9.4"
+    "@types/react-scroll": "^1.8.5",
+    "autoprefixer": "^10.4.13",
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "postcss": "^8.4.20",
+    "prop-types": "^15.8.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0"
   }
 }
