--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -8,17 +8,17 @@ click==8.1.3
 Flask==2.2.2
 Flask-Cors==3.0.10
 frozenlist==1.3.3
-gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
+MarkupSafe==2.1.2
 multidict==6.0.4
-openai==0.26.0
-python-dotenv==0.21.0
-requests==2.28.1
+openai==0.26.4
+python-dotenv==0.21.1
+pytube==12.1.2
+requests==2.28.2
 six==1.16.0
 tqdm==4.64.1
-urllib3==1.26.13
+urllib3==1.26.14
 Werkzeug==2.2.2
 yarl==1.8.2
